Fix bug that tags were covered by footer HanielF#5

--- a/source/css/_schemes/Mala/index.styl
+++ b/source/css/_schemes/Mala/index.styl
@@ -96,3 +96,8 @@
     text-align: center;
   }
 }
+
+// Main
+.main{
+  padding-bottom: 150px;
+}
